# fastapi-todo-app

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
TodoApp/: database.py  models.py
alembic/: env.py
alembic/versions/: bd4e3bfbc156_created_new_column_phone_number_for_.py
routers/: admin.py  auth.py  todos.py  users.py
test/: test_example.py
